# 3DSlicer-AR-Bridge

./: LICENSE  README.md
UnitySlicerPlugin/: CMakeLists.txt
UnitySlicerPlugin/CollborativeAREVDGuiding/: CMakeLists.txt  TestUnitySlicerConnection.ipynb
UnitySlicerPlugin/CollborativeAREVDGuiding/LibSlicerUnityConnection/: AnnotationUtility.py  CoreServer.py  MeshRenderController.py  ModelVisualizeManager.py  NetUtility.py  PLUGIN_AnnotationPlugin.py  PluginTemplate.py  PointCloudVisualizeManager.py  UnityConnMsgEncoderFactory.py  UnityConnMsgEncoderInterface.py  VertexMeshRender.py  VolumeDataSenderMMAP.py  VolumeRenderController.py  WebVertexInfoServiceZMQ.py
